--- a/.gitignore
+++ b/.gitignore
@@ -17,3 +17,28 @@
 通识课/电工电子技术/电工学简明教程第3版_9787040344967.pdf
 通识课/工科数学分析/1 高数上【蜂考系统课】.pdf
 通识课/工科数学分析/2 高数下【蜂考系统课】.pdf
+专业课/计算机系统基础/作业/进位计数制.pdf
+专业课/人工智能导论/实验&作业/实验五 遗传算法决策优化.pdf
+专业课/人工智能导论/实验&作业/实验四 遗传算法多目标优化.pdf
+专业课/人工智能导论/实验&作业/实验三 谓词逻辑.pdf
+专业课/人工智能导论/人工智能导论（21世纪高等学校人工智能专业规划教材） (廉师友).pdf
+专业课/计算机系统基础/计算机系统基础（袁春风） (OCR).pdf
+专业课/计算机系统基础/作业/存储程序工作原理-简单ISA指令集设计.pdf
+专业课/计算机系统基础/作业/浮点数的存储表示.pdf
+专业课/计算机系统基础/作业/浮点数的精度.pdf
+专业课/计算机系统基础/作业/函数调用.pdf
+水课/习思想/PPT/0. 马克思主义中国化时代化新的飞跃.pptx
+水课/习思想/PPT/6. 推动高质量发展.pptx
+水课/习思想/PPT/1. 新时代坚持和发展中国特色社会主义.pptx
+水课/习思想/PPT/5. 全面深化改革开放.pptx
+水课/习思想/PPT/8. 发展全过程人民民主.pptx
+水课/习思想/PPT/9. 全面依法治国.pptx
+水课/习思想/PPT/4. 坚持以人民为中心.pptx
+水课/习思想/PPT/7. 社会主义现代化建设的教育、科技、人才战略.pptx
+水课/习思想/PPT/2. 以中国式现代化全面推进中华民族伟大复兴.pptx
+水课/习思想/PPT/10. 建设社会主义文化强国.pptx
+水课/习思想/PPT/11. 以保障和改善民生为重点加强社会建设.pptx
+水课/习思想/PPT/3. 坚持党的全面领导.pptx
+水课/习思想/PPT/12. 建设社会主义生态文明.pptx
+水课/习思想/PPT/17. 全面从严治党.pptx
+水课/技术经济/技术经济讲义.docx
